--- a/wheel.html
+++ b/wheel.html
@@ -318,7 +318,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="main-title">Ruota della Fortuna 3D</h1>
+        <h1 class="main-title">Ruota della fortuna 3D</h1>
         <div class="wheel-container">
             <canvas id="wheelCanvas" width="500" height="500"></canvas>
             <div class="arrow"></div>
@@ -327,7 +327,7 @@
             <button id="spinButton">Gira la ruota</button>
             <button id="editButton">Modifica partecipanti</button>
             <button id="hideNumberButton">Nascondi partecipante uscito</button>
-            <button id="betaButton">Beta version 0.4</button>
+            <button id="betaButton">Beta version 0.5</button>
         </div>
         <div id="result"></div>
     </div>
