--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ruota della fortuna 3D</title>
+    <link rel="icon" type="image/png" href="icons/logo.png">
+    <link rel="icon" type="image/svg+xml" href="icons/logo.svg">
+    <link rel="shortcut icon" href="icons/logo.ico">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
