--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
             padding: 0;
             background-color: #f8f9fa;
         }
+
+        ::selection {
+          background-color: #3b57f8;
+          color: #fff;
+        }
         
         .container {
             text-align: center;
