--- a/index.html
+++ b/index.html
@@ -345,16 +345,12 @@
             margin-top: 0;
         }
         
-        /* Stile speciale per i numeri 2, 3 e 23 */
-        .number-item input[id="num1"] + label:before,  /* per il numero 2 */
-        .number-item input[id="num2"] + label:before,  /* per il numero 3 */
-        .number-item input[id="num22"] + label:before  /* per il numero 23 */ {
+        /* Stile speciale per Anamika Badial */
+        .number-item input[id="num0"] + label:before {  /* per Anamika Badial */
             border-color: #14A500;
         }
 
-        .number-item input[id="num1"]:checked + label:before,
-        .number-item input[id="num2"]:checked + label:before,
-        .number-item input[id="num22"]:checked + label:before {
+        .number-item input[id="num0"]:checked + label:before {
             background: #14A500;
         }
         
